# fastapi-template

./: .gitignore  .pyportion.yml  LICENSE  README.md
.portions/: controller.py  external.py  middleware.py  response.py  router.py  schema.py
.portions/api/: __init__.py  router.py
.portions/dependencies/: dependency.py
.portions/middleware/: middleware.py
.portions/models/: schema.py
base/: .pre-commit-config.yaml  pyproject.toml
base/app/: __init__.py
base/app/api/: __init__.py  health.py
base/app/api/general/: __init__.py  health.py
base/app/controller/: user.py
base/app/database/: __init__.py  tables.py
base/app/dependencies/: auth.py
base/app/middleware/: __init__.py  cors.py
base/app/models/responses/: response.py
base/app/settings/: __init__.py  config.py
base/app/templates/web/: index.html
base/app/utils/: logger.py
